--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import AuthInitializer from "../components/AuthInitializer.astro";
 
 interface Props {
   title?: string;
@@ -16,6 +17,7 @@ const { title = "10x Astro Starter" } = Astro.props;
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <AuthInitializer />
   </head>
   <body>
     <slot />
