--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,16 +1,19 @@
 ---
 import "../styles/global.css";
 import AuthInitializer from "../components/AuthInitializer.astro";
+import { NavigationBar } from "@/components/NavigationBar";
+import { Toaster } from "@/components/ui/sonner";
 
 interface Props {
   title?: string;
 }
 
 const { title = "10x Astro Starter" } = Astro.props;
+const user = Astro.locals.user;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -20,7 +23,13 @@ const { title = "10x Astro Starter" } = Astro.props;
     <AuthInitializer />
   </head>
   <body>
-    <slot />
+    <div class="min-h-screen flex flex-col">
+      <NavigationBar client:load user={user} />
+      <main class="flex-1">
+        <slot />
+      </main>
+    </div>
+    <Toaster client:load />
   </body>
 </html>
 
