--- a/src/pages/sets/index.astro
+++ b/src/pages/sets/index.astro
@@ -1,17 +1,16 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import FlashcardSetCreationView from "@/components/flashcard-set/FlashcardSetCreationView";
+import DashboardPage from "@/components/dashboard/DashboardPage";
 import { Toaster } from "sonner";
 
 export const prerender = false;
 ---
 
-<Layout title="Nowy zestaw fiszek">
+<Layout title="Lista utworzonych zestawów fiszek">
   <main class="min-h-screen bg-gray-50 p-8">
     <div class="mx-auto max-w-8xl space-y-10 rounded-2xl bg-white p-8 text-gray-900 border border-gray-200">
-      <h1 class="text-4xl font-bold mb-8">Utwórz nowy zestaw fiszek</h1>
-      <FlashcardSetCreationView client:load />
-      <Toaster client:load richColors />
+      <h1 class="text-4xl font-bold mb-8">Lista utworzonych zestawów fiszek</h1>
+      <DashboardPage />
     </div>
   </main>
 </Layout>
